WIP: Begin TS migration

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Dependencies
+node_modules/
+
+# TypeScript generated
+types/generated/
+*.tsbuildinfo
+
+# npm
+npm-debug.log*
+.npm
+
 # OS-specific files
 .DS_Store
 Thumbs.db
@@ -27,3 +38,7 @@ DungeonMapTracker.md
 # Temporary files
 *.tmp
 *.log
+
+# src is a symlink to vault - don't track it here
+# (the actual source files are tracked in the vault's own repo if any)
+src
